# compilers-project

./: CMakeLists.txt  README.md
ParseTableGenerator/TableGenerator/: CMakeLists.txt  Parse_Table_Generator.cpp  Parse_Table_Generator.h  main.cpp
bonus/: example.c  lex.l  lex.yy.c
resources/: cfg_program.txt  grammar.txt  program.txt  program2.txt  rules.txt  table.csv  table_mini.csv  tokens.txt
src/: CMakeLists.txt
src/CFGParser/: CFGParser.cpp  CFGParser.h  CMakeLists.txt
src/DFA/: CMakeLists.txt  DFA.cpp  DFA.h  State.cpp  State.h
src/DFABuilder/: CMakeLists.txt  DFABuilder.cpp  DFABuilder.h
src/LL1Generator/: CMakeLists.txt  LL1Generator.cpp  LL1Generator.h
src/LanguageRulesParser/: CMakeLists.txt  LanguageRulesParser.cpp  LanguageRulesParser.h
src/LanguageTokens/: CMakeLists.txt  Token.h
src/NFA/: CMakeLists.txt  NFA.cpp  NFA.h  State.cpp  State.h
src/NFABuilder/: CMakeLists.txt  NFABuilder.cpp  NFABuilder.h
src/ParseTableGenerator/: CMakeLists.txt  ParseTableGenerator.cpp  ParseTableGenerator.h  Parse_Table_Generator.cpp  Parse_Table_Generator.h
src/Readers/: CFGReader.cpp  CFGReader.h  CMakeLists.txt  LanguageRulesReader.cpp  LanguageRulesReader.h  ProgramReader.cpp  ProgramReader.h
src/Simulator/: CMakeLists.txt  LexicalSimulator.cpp  LexicalSimulator.h  ParserSimulator.cpp  ParserSimulator.h  Simulator.cpp  Simulator.h
src/utils/: AcceptValue.h  CFGTypes.h  CMakeLists.txt  DFAPrinter.h
tests/: CMakeLists.txt
tests/CFGParserTest/: CFGParserTest.cpp  CMakeLists.txt
tests/DFABuilderTest/: CMakeLists.txt  DFABuilderTest.cpp
(+12 files in other folders)
