add_subdirectory(LanguageRulesParser)
add_subdirectory(LanguageTokens)
add_subdirectory(NFA)
add_subdirectory(DFA)
add_subdirectory(NFABuilder)
add_subdirectory(DFABuilder)
add_subdirectory(utils)
add_subdirectory(Simulator)
add_subdirectory(Readers)
add_subdirectory(CFGParser)
add_subdirectory(LL1Generator)
